# pylicensing

./: README.md  pyproject.toml  requirements.txt  setup.cfg  t.py
example/: create.py  validate.py
src/pylicensing/: __init__.py  database.py  exceptions.py  format_validation.py  hwid_tools.py  validation.py
src/pylicensing/key/: __init__.py  _generate.py  format.py  key.py
src/pylicensing/management/: __init__.py  queries.py
src/pylicensing/managing/: queries.py
src/pylicensing/validation/: __init__.py  key_validation.py  queries.py
tests/: test_database.py  test_format_validation.py  test_hwid.py  test_key_creation.py
